--- a/chat/icbirc/Makefile
+++ b/chat/icbirc/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.11 2007/01/07 09:13:49 rillig Exp $
+# $NetBSD: Makefile,v 1.12 2007/03/04 11:30:33 wiz Exp $
 
 DISTNAME=	icbirc-1.8
 CATEGORIES=	chat
 MASTER_SITES=	http://www.benzedrine.cx/
 
-MAINTAINER=	tv@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.benzedrine.cx/icbirc.html
 COMMENT=	Proxy IRC client and ICB server
 
