--- a/comms/fidogate/Makefile
+++ b/comms/fidogate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.53 2006/03/22 22:50:31 tv Exp $
+# $NetBSD: Makefile,v 1.54 2006/04/23 00:12:36 jlam Exp $
 #
 
 DISTNAME=	fidogate-4.4.10
@@ -6,7 +6,7 @@ PKGREVISION=	3
 CATEGORIES=	comms
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=fidogate/}
 
-MAINTAINER=	tv@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.fidogate.org/
 COMMENT=	FidoNet (FTN) <-> Internet mail and news gateway
 
