--- a/security/jessie/Makefile
+++ b/security/jessie/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2006/03/22 22:50:33 tv Exp $
+# $NetBSD: Makefile,v 1.11 2006/05/18 19:55:34 wiz Exp $
 #
 
 DISTNAME=		jessie-1.0.1
 CATEGORIES=		security
 MASTER_SITES=		http://syzygy.metastatic.org/jessie/
 
-MAINTAINER=		tv@NetBSD.org
+MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.nongnu.org/jessie/
 COMMENT=		GPL implementation of the Java Secure Sockets Extension
 
