--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.657 2007/02/16 12:07:55 xtraeme Exp $
+# $NetBSD: Makefile,v 1.658 2007/02/17 19:14:52 adrianp Exp $
 #
 
 COMMENT=	Networking tools
@@ -485,6 +485,7 @@ SUBDIR+=	waste
 SUBDIR+=	wget
 SUBDIR+=	whatmask
 SUBDIR+=	whoson
+SUBDIR+=	wide-dhcpv6
 SUBDIR+=	wimon
 SUBDIR+=	wireshark
 SUBDIR+=	wistumbler
