--- a/x11/gtk2/Makefile
+++ b/x11/gtk2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.137 2007/01/26 00:55:00 markd Exp $
+# $NetBSD: Makefile,v 1.138 2007/02/01 12:50:53 drochner Exp $
 
-DISTNAME=		gtk+-2.10.9
+DISTNAME=		gtk+-2.10.11
 PKGNAME=		${DISTNAME:S/gtk/gtk2/}
 CATEGORIES=		x11
 MASTER_SITES=		ftp://ftp.gtk.org/pub/gtk/v2.10/ \
