--- a/editors/TeXmacs/Makefile
+++ b/editors/TeXmacs/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.64 2006/12/15 19:24:30 drochner Exp $
+# $NetBSD: Makefile,v 1.65 2007/01/30 23:38:35 joerg Exp $
 
-DISTNAME=		TeXmacs-1.0.6.7-src
+DISTNAME=		TeXmacs-1.0.6.9-src
 PKGNAME=		${DISTNAME:S/-src//}
 CATEGORIES=		editors
 MASTER_SITES=		ftp://ftp.texmacs.org/pub/TeXmacs/targz/
