--- a/www/ns-remote/Makefile
+++ b/www/ns-remote/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2006/10/04 22:04:10 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2007/01/16 11:24:22 abs Exp $
 
 DISTNAME=	ns-remote
 PKGNAME=	ns-remote-1.11
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	www
 MASTER_SITES=	http://home.netscape.com/newsref/std/
 DISTFILES=	remote.c vroot.h
