--- a/security/putty/Makefile
+++ b/security/putty/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/09/09 02:46:08 obache Exp $
+# $NetBSD: Makefile,v 1.13 2007/03/17 16:35:05 rillig Exp $
 #
 
 DISTNAME=	putty-0.59
 CATEGORIES=	security
-MASTER_SITES=	http://the.earth.li/~sgtatham/putty/latest/
+MASTER_SITES=	http://the.earth.li/~sgtatham/putty/0.59/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.chiark.greenend.org.uk/~sgtatham/putty/
