--- a/devel/p5-Date-Business/Makefile
+++ b/devel/p5-Date-Business/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/08/15 01:51:14 erh Exp $
+# $NetBSD: Makefile,v 1.7 2007/02/22 19:26:22 wiz Exp $
 #
 
 DISTNAME=	Date-Business-1.2
@@ -8,7 +8,7 @@ PKGREVISION=	2
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Date/}
 
-MAINTAINER=	jwise@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.cpan.org/
 COMMENT=	Perl5 module for fast calendar and business date calculations
 
