--- a/databases/p5-DBD-postgresql/Makefile
+++ b/databases/p5-DBD-postgresql/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2006/04/23 14:22:19 hiramatsu Exp $
+# $NetBSD: Makefile,v 1.38 2006/12/28 12:12:57 joerg Exp $
 #
 
 VER=		1.48
@@ -9,7 +9,7 @@ PKGREVISION=	3
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
-MAINTAINER=	jwise@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://gborg.postgresql.org/project/dbdpg/projdisplay.php
 COMMENT=	Perl DBI/DBD driver for PostgreSQL databases
 
