--- a/lang/jdk/Makefile
+++ b/lang/jdk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.47 2006/04/22 09:22:10 rillig Exp $
+# $NetBSD: Makefile,v 1.48 2006/05/22 22:22:04 jlam Exp $
 #
 
 VERSION=	1.1.8
@@ -9,7 +9,7 @@ MASTER_SITES=	ftp://ftp.NetBSD.org/pub/NetBSD/misc/java/i386/${VERSION}/ \
 		ftp://ftp.de.NetBSD.org/pub/NetBSD/misc/java/i386/${VERSION}/
 EXTRACT_SUFX=	.tgz
 
-MAINTAINER=	jwise@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Sun's Java(tm) Development Kit
 
 LICENSE=	jdk-license
