--- a/wm/lwm/Makefile
+++ b/wm/lwm/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.9 2006/02/05 23:11:14 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2006/12/27 13:37:41 joerg Exp $
 
 DISTNAME=	lwm-1.2.1
 PKGREVISION=	1
 CATEGORIES=	x11 wm
 MASTER_SITES=	http://www.jfc.org.uk/files/lwm/
 
-MAINTAINER=	jwise@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.jfc.org.uk/software/lwm.html
 COMMENT=	Lightweight Window Manager
 
