--- a/comms/pilot-link/Makefile.common
+++ b/comms/pilot-link/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile.common,v 1.9 2006/03/04 21:29:05 jlam Exp $
+# $NetBSD: Makefile.common,v 1.10 2007/01/26 01:26:46 markd Exp $
 
 DISTNAME=		pilot-link-${PILOT_LINK_VERS}
 CATEGORIES=		comms
 MASTER_SITES=		http://downloads.pilot-link.org/
 EXTRACT_SUFX=		.tar.bz2
 
-PILOT_LINK_VERS=	0.12.1
+PILOT_LINK_VERS=	0.12.2
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE?=		http://www.pilot-link.org/
