--- a/devel/makedepend/Makefile
+++ b/devel/makedepend/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/02 13:58:05 joerg Exp $
 #
 
-DISTNAME=		makedepend-1.0.0
+DISTNAME=		makedepend-1.0.1
 CATEGORIES=		devel
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/util/
 EXTRACT_SUFX=		.tar.bz2
