--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.272 2007/02/27 11:58:51 hira Exp $
+# $NetBSD: Makefile,v 1.273 2007/03/01 08:05:13 hira Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -213,6 +213,7 @@ SUBDIR+=	screen
 SUBDIR+=	siag
 SUBDIR+=	splitvt
 SUBDIR+=	stellarium
+SUBDIR+=	taskjuggler
 SUBDIR+=	tds
 SUBDIR+=	team
 SUBDIR+=	theme-dirs
