--- a/security/dropbear/Makefile
+++ b/security/dropbear/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2006/03/04 21:30:33 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2006/03/14 20:03:43 drochner Exp $
 
-DISTNAME=	dropbear-0.48.1
+DISTNAME=	dropbear-0.49
 CATEGORIES=	security
 MASTER_SITES=	http://matt.ucc.asn.au/dropbear/releases/
 
