--- a/graphics/py-imagingtk/Makefile
+++ b/graphics/py-imagingtk/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2006/04/06 06:22:05 reed Exp $
+# $NetBSD: Makefile,v 1.21 2007/02/22 19:26:36 wiz Exp $
 #
 
-DISTNAME=	Imaging-1.1.5
-PKGNAME=	${PYPKGPREFIX}-imagingtk-1.1.5
-PKGREVISION=	1
+DISTNAME=	Imaging-1.1.6
+PKGNAME=	${PYPKGPREFIX}-imagingtk-1.1.6
 CATEGORIES=	graphics python
 MASTER_SITES=	http://effbot.org/downloads/
 
