--- a/graphics/py-cairo/Makefile
+++ b/graphics/py-cairo/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2006/09/20 12:57:46 joerg Exp $
+# $NetBSD: Makefile,v 1.5 2006/10/12 14:43:17 drochner Exp $
 #
 
-DISTNAME=		pycairo-1.2.2
-PKGNAME=		${PYPKGPREFIX}-cairo-1.2.2
+DISTNAME=		pycairo-1.4.0
+PKGNAME=		${PYPKGPREFIX}-cairo-1.4.0
 CATEGORIES=		graphics
 MASTER_SITES=		http://cairographics.org/releases/
 
