--- a/misc/kdepim3/Makefile
+++ b/misc/kdepim3/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.72 2007/02/03 01:52:55 markd Exp $
+# $NetBSD: Makefile,v 1.73 2007/02/22 13:53:43 joerg Exp $
 
 DISTNAME=	kdepim-${_KDE_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc
 COMMENT=	Personal Information Management tools for the KDE desktop
 
