--- a/textproc/p5-XML-RAI/Makefile
+++ b/textproc/p5-XML-RAI/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2006/01/24 07:32:37 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2006/02/05 23:11:05 joerg Exp $
 
 DISTNAME=	XML-RAI-0.51
 PKGNAME=	p5-${DISTNAME}
@@ -6,7 +6,7 @@ PKGREVISION=	4
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
-MAINTAINER=	schmonz@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Maps RSS tags to one common simplified interface
 
 DEPENDS+=	p5-XML-RSS-Parser>=2.15:../../textproc/p5-XML-RSS-Parser
