--- a/textproc/p5-XML-RSS-Parser/Makefile
+++ b/textproc/p5-XML-RSS-Parser/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.7 2006/02/05 23:11:05 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/04/09 01:01:19 schmonz Exp $
 
 DISTNAME=	XML-RSS-Parser-4.0
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
-MAINTAINER=	schmonz@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Liberal object-oriented parser for RSS feeds
 
 DEPENDS+=	p5-XML-SAX-[0-9]*:../../textproc/p5-XML-SAX
