--- a/devel/kdevelop/Makefile
+++ b/devel/kdevelop/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.64 2007/01/26 03:31:32 markd Exp $
+# $NetBSD: Makefile,v 1.65 2007/02/22 19:26:21 wiz Exp $
 
-DISTNAME=	kdevelop-3.3.6
+DISTNAME=	kdevelop-3.4.0
 CATEGORIES=	devel kde meta-pkgs
 MASTER_SITES=	# empty
 DISTFILES=	# empty
