--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.821 2007/03/16 21:11:50 kristerw Exp $
+# $NetBSD: Makefile,v 1.822 2007/03/20 19:11:41 kristerw Exp $
 #
 
 COMMENT=	Development utilities
@@ -231,6 +231,7 @@ SUBDIR+=	kdbg
 SUBDIR+=	kdesdk3
 SUBDIR+=	kdevelop
 SUBDIR+=	kdevelop-base
+SUBDIR+=	kdiff3
 SUBDIR+=	ko-po-check
 SUBDIR+=	kscope
 SUBDIR+=	lcc
