--- a/net/p5-Net-DNS/Makefile
+++ b/net/p5-Net-DNS/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2006/09/03 16:55:15 heinz Exp $
+# $NetBSD: Makefile,v 1.33 2006/11/05 17:31:10 joerg Exp $
 
-DISTNAME=		Net-DNS-0.58
+DISTNAME=		Net-DNS-0.59
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5ndn
 CATEGORIES=		net perl5
