--- a/net/gnome-netstatus/Makefile
+++ b/net/gnome-netstatus/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2006/09/16 12:20:39 jmmv Exp $
+# $NetBSD: Makefile,v 1.26 2007/03/21 12:05:51 wiz Exp $
 #
 
-DISTNAME=	gnome-netstatus-2.12.0
-PKGREVISION=	9
+DISTNAME=	gnome-netstatus-2.12.1
 CATEGORIES=	net gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-netstatus/2.12/}
 EXTRACT_SUFX=	.tar.bz2
