--- a/emulators/zsnes/Makefile
+++ b/emulators/zsnes/Makefile
@@ -1,29 +1,24 @@
-# $NetBSD: Makefile,v 1.34 2006/05/21 17:09:53 joerg Exp $
-#
+# $NetBSD: Makefile,v 1.35 2006/06/12 16:28:07 wiz Exp $
 
-DISTNAME=		zsnes142src
-PKGNAME=		zsnes-1.42
-PKGREVISION=		6
-CATEGORIES=		emulators
-MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=zsnes/}
+DISTNAME=	zsnes151src
+PKGNAME=	zsnes-1.51
+CATEGORIES=	emulators
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=zsnes/}
+EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://www.zsnes.com/
-COMMENT=		Super NES emulator
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://www.zsnes.com/
+COMMENT=	Super NES emulator
 
 BUILD_DEPENDS+=		nasm-[0-9]*:../../devel/nasm
 
 ONLY_FOR_PLATFORM=	*-*-i386
 
-BUILD_TARGET=		zsnes
-
-WRKSRC=			${WRKDIR}/zsnes_1_42/src
-GNU_CONFIGURE=		yes
+WRKSRC=			${WRKDIR}/zsnes_1_51/src
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		gmake
+GNU_CONFIGURE=		yes
 
 .include "../../devel/SDL/buildlink3.mk"
-.include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
-
 .include "../../mk/bsd.pkg.mk"
